# hill-bagging

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  Makefile  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
src/database/: api.py
src/database/services/: database_service_interface.py  postgressqlservice.py  sqliteservice.py
src/database/services/tests/: test_sqliteservice.py
src/database/tests/: test_api.py
src/maps/: api.py  dtos.py  service.py
src/maps/tests/: test_maps_api.py  test_maps_service.py
src/scraper/: api.py  service.py
src/scraper/tests/: test_api.py  test_service.py
src/users/: api.py  data.py  dtos.py  location_service.py  service.py
src/users/tests/: factories.py  test_api.py  test_data.py  test_location_service.py  test_service.py  test_users_api.py  test_users_service.py
src/utils/: distance.py  logging_config.py  time.py
src/utils/tests/: test_logging_config.py
src/walkhighlands/: api.py  dtos.py  service.py
src/walkhighlands/data/: hill_data.py
src/walkhighlands/tests/: test_api.py  test_data.py  test_service.py
src/walkhighlands/tests/test_data/: hill_page_walks.html  munro_table.html  walk_data_page.html  walk_page_summits.html
