[project]
name = "walkhighlands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pysqlite3-binary>=0.5.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.1.0",
]

[tool.mypy]
ignore_missing_imports = true
